adjust three cols

--- a/layouts/partials/home/news.html
+++ b/layouts/partials/home/news.html
@@ -1,6 +1,6 @@
 <!-- Hero content: this will be a banner -->
-</section>
-<div class="notification is-danger is-light has-text-centered">
+<section>
+<div class="notification is-dark is-light has-text-centered">
 
 {{ $updates := $.Site.Data.updates }}
 
