finish front page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,9 @@
 
 {{ partial "home/hero.html" . }}
 {{ partial "home/news.html" . }}
-{{ partial "home/three-cols.html" . }}
+{{ partial "home/showcards.html" . }}
+{{ partial "home/topics.html" . }}
+{{ partial "home/support.html" . }}
 
 {{ end }}
 
