added archives page

--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -31,7 +31,7 @@
                         style="border-top:.1rem dashed #dbdbdb57 !important;margin: 1rem 0 !important;"></div>
 
                     <div class="buttons is-centered">
-                        <a href="/markt" class="button is-warning is-large">View Markt</a>
+                        <a href="{{ site.Params.home.primary_button.link }}" class="button is-warning is-large">{{ site.Params.home.primary_button.title }} </a>
                     </div>
                 </div>
             </div>
