adjust navbar menu

--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -13,19 +13,31 @@
   <div class="navbar-menu" id="navMenu">
     <div class="navbar-start">
 
+
+
+      {{ $currentPage := . }}
+      {{ range .Site.Params.menu.topleft }}
+      {{ if isset . "children" }}
       <div class="navbar-item has-dropdown is-hoverable">
-        <a href="{{ .Site.Params.menu.topleft.url }}" class="navbar-link">
-          {{ .Site.Params.menu.topleft.name }}
+        <a href="{{ .url }}" class="navbar-link">
+          {{ .name }}
         </a>
         <div class="navbar-dropdown">
-          {{ range $.Site.Taxonomies.categories }}
-          <a href="{{ .Page.Permalink }}" class="navbar-item">
-            {{ .Page.Title }}
+          {{ range .children }}
+          <a href="{{ .url }}" class="navbar-item">
+            {{ .name }}
           </a>
           {{ end }}
         </div>
       </div>
+      {{ else }}
 
+        <a href="{{ .url }}" class="navbar-item">
+          {{ .name }}
+        </a>
+
+      {{ end }}
+      {{ end }}
 
 
     </div>
@@ -49,13 +61,11 @@
       <div class="navbar-item">
         {{ $currentPage := . }}
         {{ range .Site.Menus.main }}
-        {{ if eq (lower .Name) "markts" }}
 
-        {{else}}
         <a itemprop="url"
           class="navbar-item {{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }} is-active{{end}}"
           href="{{.URL}}"><span itemprop="name">{{ .Name }}</span></a>
-        {{ end }}
+
         {{ end }}
 
         {{ if .Site.Params.github}}
@@ -79,6 +89,7 @@
           </span>
         </a>
         {{end}}
+        {{ partial "langswitcher.html" . }}
 
 
       </div>
