--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,6 +33,7 @@
 
   <link rel="stylesheet" href="/css/bulma.css">
   <link rel="stylesheet" href="/css/bulma-divider.min.css">
+  <link rel="stylesheet" href="/css/bulma-timeline.min.css">
   <link rel="stylesheet" href="/assets/css/bulma-ribbon.min.css">
   <link rel="stylesheet" href="/assets/css/tooltip.css">
   {{ if .Site.Params.theme_variant }}
