--- a/layouts/activities/list.html
+++ b/layouts/activities/list.html
@@ -6,7 +6,7 @@
 {{ $archives_lang := index $archives .Page.Language.Lang }}
 {{ if $archives_lang }}
 
-<div class="hero" style="margin-bottom:2em;">
+<div class="hero is-primary" style="margin-bottom:2em;">
     <div class="hero-body">
         <div class="container">
             <div class="container has-text-centered">
