added more page layout

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,6 +8,8 @@
 
 {{ define "main" }}
 
+{{ partial "utils/banner.html" . }}
+
 <main class="main--content" aria-label="Content">
 <div class="columns is-fullheight">
     <div class="column">
